Closed Bug 1898706 Opened 10 months ago Closed 5 months ago

Message vanishes when redoing moving from an IMAP folder

Categories

(MailNews Core :: Networking: IMAP, defect)

Thunderbird 115
Desktop
All
defect

Tracking

(thunderbird_esr115 wontfix, thunderbird_esr128? fixed, thunderbird132 affected, thunderbird133 verified)

VERIFIED FIXED
133 Branch
Tracking Status
thunderbird_esr115 --- wontfix
thunderbird_esr128 ? fixed
thunderbird132 --- affected
thunderbird133 --- verified

People

(Reporter: welpy-cw, Assigned: welpy-cw)

References

(Regression)

Details

(Keywords: dataloss, regression, triaged)

Attachments

(2 files, 1 obsolete file)

Steps to reproduce:

  1. Move a message from an IMAP folder to a local folder.
  2. Undo
  3. Redo

Expected result:
The message is moved (again) into the local folder.

Actual result:
The message disappears.

Flags: needinfo?(benc)
Component: Networking: NNTP → Networking: IMAP
See Also: → 1572567

Regression range
Likely regressed by bug 402392.

Keywords: regression
Regressed by: 402392
See Also: → 1847392
Severity: -- → S3
Keywords: triaged
OS: Unspecified → All
See Also: → 923002

Hartmut, any idea what's going on?

Flags: needinfo?(h.w.forms)

Bug 402392 changed the mechanism for restoring messages in local folders when performing an undo/redo operation. The old way was also retained and could be enabled by setting nsLocalMoveCopyMsgTxn::m_canUndelete, but this wasn't ever used.

This patch removes m_canUndelete and the code it covers, while fixing and simplifying the redo function.

Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
Flags: needinfo?(h.w.forms)
Hardware: Unspecified → Desktop
Flags: needinfo?(benc)
Target Milestone: --- → 133 Branch

Pushed by brendan@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/f435b708a4bb
Fix redo move/copy of messages from IMAP to local folder. r=BenC

Status: ASSIGNED → RESOLVED
Closed: 5 months ago
Resolution: --- → FIXED

Can you please briefly explain if this is relevant for 128, urgently or optionally ?

Flags: needinfo?(benc)

bug 402392 is version 12, so this should be an extremely old regression and I suggest it cannot be urgent.

(In reply to Wayne Mery (:wsmwk) from comment #6)

bug 402392 is version 12, so this should be an extremely old regression and I suggest it cannot be urgent.

Yes, this hasn't bothered anyone enough to report for over 12 years. Redo doesn't seem to be used that much.

Flags: needinfo?(benc)

Confirming this issue as verified fixed with 133.0b3(20241107210012) using Windows 11, macOS 14, and Ubuntu 22.

Status: RESOLVED → VERIFIED

Comment on attachment 9430648 [details]
Bug 1898706 - Fix redo move/copy of messages from IMAP to local folder. r=benc

[Approval Request Comment]
Regression caused by (bug #): bug 402392
User impact if declined: Redoing a copy operation of messages from IMAP to a local folder removes the messages.
Testing completed (on c-c, etc.): c-c and beta
Risk to taking this patch (and alternatives if risky): low

Attachment #9430648 - Flags: approval-comm-esr128?

Comment on attachment 9430648 [details]
Bug 1898706 - Fix redo move/copy of messages from IMAP to local folder. r=benc

[Triage Comment]
Approved for esr128

Attachment #9430648 - Flags: approval-comm-esr128? → approval-comm-esr128+

Hartmut, This patch needs to be rebased in order to apply to 128. Can you take care of that and we can pick this up in the next point release?

Flags: needinfo?(h.w.forms)
Attached patch 1898706-esr128.patch (obsolete) — Splinter Review

here's the merged patch

I haven't tested the merged patch.

Here is a try build with it:
https://treeherder.mozilla.org/jobs?repo=try-comm-central&revision=a56f585f2e8742476efbd0e5834f9ee4c0b53102

Could someone else check that the try build fixes the bug?

(In reply to Kai Engert [:KaiE:] from comment #13)

I haven't tested the merged patch.

Here is a try build with it:
https://treeherder.mozilla.org/jobs?repo=try-comm-central&revision=a56f585f2e8742476efbd0e5834f9ee4c0b53102

Could someone else check that the try build fixes the bug?

Thanks Kai. I tested the optimized Linux try build, the problem is fixed. I'll upload a slightly modified version of the patch that should fix the clang-format error.

Flags: needinfo?(h.w.forms)
Attachment #9441783 - Flags: approval-comm-esr128?
Attachment #9441614 - Attachment is obsolete: true

Comment on attachment 9441783 [details] [diff] [review]
D225458.esr128.diff

[Triage Comment]
Approved for esr128

Attachment #9441783 - Flags: approval-comm-esr128? → approval-comm-esr128+

Comment on attachment 9430648 [details]
Bug 1898706 - Fix redo move/copy of messages from IMAP to local folder. r=benc

[Triage Comment]
Patch for esr128 is available as a separate attachment.

Attachment #9430648 - Flags: approval-comm-esr128+ → approval-comm-esr128-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: