Bug 1898706 - Fix redo move/copy of messages from IMAP to local folder. r=BenC

Bug 402392 changed the mechanism for restoring messages in local folders when performing an undo/redo operation. The old way was also retained and could be enabled by setting `nsLocalMoveCopyMsgTxn::m_canUndelete`, but this wasn't ever used.

This patch removes `m_canUndelete` and the code it covers, while fixing and simplifying the redo function.

Differential Revision: https://phabricator.services.mozilla.com/D225458

--HG--
extra : amend_source : 9e0a531ba942ec72b2b56d8d966687727e30779c